--- a/Microblog1.1/Classes/Home/View/MyFootView.xib
+++ b/Microblog1.1/Classes/Home/View/MyFootView.xib
@@ -21,7 +21,7 @@
                     <rect key="frame" x="271" y="12" width="20" height="20"/>
                 </activityIndicatorView>
             </subviews>
-            <color key="backgroundColor" red="0.75686274509803919" green="0.75686274509803919" blue="0.75686274509803919" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="gray" destination="F68-CR-EBS" id="O9I-Tp-fMt"/>
